--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.1.3",
     "firebase": "^5.4.2",
     "react": "^16.5.0",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.0",
     "react-fb-image-grid": "^0.1.2",
     "react-scripts": "1.1.5",
