--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "firebase": "^5.4.2",
+    "glyphicons": "^0.2.0",
     "react": "^16.5.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.0",
+    "react-facebook-emoji": "^1.0.11",
     "react-fb-image-grid": "^0.1.2",
     "react-scripts": "1.1.5",
     "sweetalert": "^2.1.0"
